[gd_scene load_steps=64 format=2]

[ext_resource path="res://textures/characters/eman/walk-down/eman-2-3-2-pixilart.png" type="Texture" id=1]
[ext_resource path="res://textures/characters/eman/walk-down/eman-2-4-1-pixilart.png" type="Texture" id=2]
[ext_resource path="res://textures/characters/eman/walk-down/eman-2-5-1-pixilart.png" type="Texture" id=3]
[ext_resource path="res://textures/characters/eman/walk-down/eman-2-6-2-pixilart.png" type="Texture" id=4]
[ext_resource path="res://textures/characters/eman/walk-down/eman-2-7-2-pixilart.png" type="Texture" id=5]
[ext_resource path="res://textures/characters/eman/walk-down/eman-2-8-3-pixilart.png" type="Texture" id=6]
[ext_resource path="res://textures/characters/eman/walk-down/eman-2-9-2-pixilart.png" type="Texture" id=7]
[ext_resource path="res://textures/characters/eman/walk-left/eman-3.2.4-pixilart.png" type="Texture" id=8]
[ext_resource path="res://textures/characters/eman/walk-left/eman-3.3.1-pixilart.png" type="Texture" id=9]
[ext_resource path="res://textures/characters/eman/walk-left/eman-3.4.2-pixilart.png" type="Texture" id=10]
[ext_resource path="res://textures/characters/eman/walk-left/eman-3.5.1-pixilart.png" type="Texture" id=11]
[ext_resource path="res://textures/characters/eman/walk-left/eman-3.6.1-pixilart.png" type="Texture" id=12]
[ext_resource path="res://textures/characters/eman/walk-left/eman-3.7.1-pixilart.png" type="Texture" id=13]
[ext_resource path="res://textures/characters/eman/walk-left/eman-3.8.1-pixilart.png" type="Texture" id=14]
[ext_resource path="res://textures/characters/eman/walk-left/eman-3.9.1-pixilart.png" type="Texture" id=15]
[ext_resource path="res://textures/characters/eman/walk-right/eman-4.2.1-pixilart.png" type="Texture" id=16]
[ext_resource path="res://textures/characters/eman/walk-right/eman-4.3.1-pixilart.png" type="Texture" id=17]
[ext_resource path="res://textures/characters/eman/walk-right/eman-4.4.1-pixilart.png" type="Texture" id=18]
[ext_resource path="res://textures/characters/eman/walk-right/eman-4.5.1-pixilart.png" type="Texture" id=19]
[ext_resource path="res://textures/characters/eman/walk-right/eman-4.6.1-pixilart.png" type="Texture" id=20]
[ext_resource path="res://textures/characters/eman/walk-right/eman-4.7.2-pixilart.png" type="Texture" id=21]
[ext_resource path="res://textures/characters/eman/walk-right/eman-4.8.1-pixilart.png" type="Texture" id=22]
[ext_resource path="res://textures/characters/eman/walk-right/eman-4.9.1-pixilart.png" type="Texture" id=23]
[ext_resource path="res://textures/characters/eman/walk-up/eman-5.2.1-pixilart.png" type="Texture" id=24]
[ext_resource path="res://textures/characters/eman/walk-up/eman-5.4.2-pixilart.png" type="Texture" id=25]
[ext_resource path="res://textures/characters/eman/walk-up/eman-5.3.1-pixilart.png" type="Texture" id=26]
[ext_resource path="res://textures/characters/eman/walk-up/eman-5.5.1-pixilart.png" type="Texture" id=27]
[ext_resource path="res://textures/characters/eman/walk-up/eman-5.6.1-pixilart.png" type="Texture" id=28]
[ext_resource path="res://textures/characters/eman/walk-up/eman-5.8.1-pixilart.png" type="Texture" id=29]
[ext_resource path="res://textures/characters/eman/walk-up/eman-5.9.1-pixilart.png" type="Texture" id=30]
[ext_resource path="res://textures/characters/eman/walk-up/eman-5.7.1-pixilart.png" type="Texture" id=31]
[ext_resource path="res://textures/characters/eman/attack-down/eman-6.3.3-pixilart.png" type="Texture" id=32]
[ext_resource path="res://textures/characters/eman/attack-right/eman-7.1.2-pixilart.png" type="Texture" id=33]
[ext_resource path="res://textures/characters/eman/attack-down/eman-6.1.1-pixilart.png" type="Texture" id=34]
[ext_resource path="res://textures/characters/eman/attack-right/eman-7.4.3-pixilart.png" type="Texture" id=35]
[ext_resource path="res://textures/characters/eman/attack-left/eman-8.1.1-pixilart.png" type="Texture" id=36]
[ext_resource path="res://textures/characters/eman/attack-right/eman-7.2.3-pixilart.png" type="Texture" id=37]
[ext_resource path="res://textures/characters/eman/attack-right/eman-7.3.3-pixilart.png" type="Texture" id=38]
[ext_resource path="res://textures/characters/eman/attack-down/eman-6.2.1-pixilart.png" type="Texture" id=39]
[ext_resource path="res://textures/characters/eman/attack-down/eman-6.5.2-pixilart.png" type="Texture" id=40]
[ext_resource path="res://textures/characters/eman/attack-down/eman-6.6.2-pixilart.png" type="Texture" id=41]
[ext_resource path="res://textures/characters/eman/attack-left/eman-8.3.1-pixilart.png" type="Texture" id=42]
[ext_resource path="res://textures/characters/eman/walk-down/eman-2-2-2-pixilart.png" type="Texture" id=43]
[ext_resource path="res://textures/characters/eman/attack-left/eman-8.4.1-pixilart.png" type="Texture" id=44]
[ext_resource path="res://textures/characters/eman/attack-left/eman-8.5.1-pixilart.png" type="Texture" id=45]
[ext_resource path="res://textures/characters/eman/attack-down/eman-6.4.2-pixilart.png" type="Texture" id=46]
[ext_resource path="res://textures/characters/eman/attack-left/eman-8.6.1-pixilart.png" type="Texture" id=47]
[ext_resource path="res://textures/characters/eman/attack-left/eman-8.2.1-pixilart.png" type="Texture" id=48]
[ext_resource path="res://textures/characters/eman/attack-right/eman-7.5.6-pixilart.png" type="Texture" id=49]
[ext_resource path="res://textures/characters/eman/attack-right/eman-7.6.2-pixilart.png" type="Texture" id=50]
[ext_resource path="res://textures/characters/eman/attack-up/eman-9.1.2-pixilart.png" type="Texture" id=51]
[ext_resource path="res://textures/characters/eman/attack-up/eman-9.2.2-pixilart.png" type="Texture" id=52]
[ext_resource path="res://textures/characters/eman/attack-up/eman-9.6.1-pixilart.png" type="Texture" id=53]
[ext_resource path="res://textures/characters/eman/attack-up/eman-9.3.2-pixilart.png" type="Texture" id=54]
[ext_resource path="res://textures/characters/eman/attack-up/eman-9.4.2-pixilart.png" type="Texture" id=55]
[ext_resource path="res://textures/characters/eman/attack-up/eman-9.5.1-pixilart.png" type="Texture" id=56]
[ext_resource path="res://characters/eman/Eman.gd" type="Script" id=57]
[ext_resource path="res://characters/eman/state_machine.gd" type="Script" id=58]
[ext_resource path="res://characters/eman/walk_state.gd" type="Script" id=59]
[ext_resource path="res://characters/eman/idle_state.gd" type="Script" id=60]
[ext_resource path="res://characters/eman/attack_state.gd" type="Script" id=61]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Walk Up",
"speed": 15.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 39 ), ExtResource( 32 ), ExtResource( 46 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "Attack Down",
"speed": 15.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 53 ) ],
"loop": true,
"name": "Attack Up",
"speed": 15.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 48 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 47 ) ],
"loop": true,
"name": "Attack Left",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "Walk Right",
"speed": 15.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 35 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "Attack Right",
"speed": 15.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Walk Left",
"speed": 15.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Walk Down",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.0326, 46.0233 )

[node name="Eman" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 57 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -270, -54 )
frames = SubResource( 1 )
animation = "Attack Up"
centered = false
offset = Vector2( 270, 54 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 27.4185, 49.8342 )
shape = SubResource( 2 )

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 58 )

[node name="walk_state" type="Node" parent="state_machine"]
script = ExtResource( 59 )

[node name="idle_state" type="Node" parent="state_machine"]
script = ExtResource( 60 )

[node name="attack_state" type="Node" parent="state_machine"]
script = ExtResource( 61 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
